fix: maven compiler plugin & lombok config